Replace the insert method to copy/paste; Integrate facebook parser

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -32,6 +32,8 @@
   "permissions": [
     "contextMenus",
     "activeTab",
-    "storage"
+    "storage",
+    "clipboardRead",
+    "clipboardWrite"
   ]  
 }
