--- a/package.json
+++ b/package.json
@@ -3,8 +3,19 @@
   "version": "1.0.2",
   "description": "chrome-extension-quick-reply",
   "scripts": {
-    "build": "node utils/build.js",
-    "start": "node utils/webserver.js"
+    "ng": "ng",
+    "start": "npm run watch",
+    "build:angular": "ng build",
+    "build:angular-production": "ng build --prod",
+    "watch:angular": "ng build --watch --delete-output-path false",
+    "build:chrome": "webpack --config chrome/webpack.config.js",
+    "build:chrome-production": "webpack -p --config chrome/webpack.config.prod.js",
+    "watch:chrome": "webpack --config chrome/webpack.config.js -w",
+    "build": "npm run clean && npm run build:angular && npm run build:chrome",
+    "build:production": "npm run build:angular-production && npm run build:chrome-production && npm run pack",
+    "watch": "npm run clean && npm-run-all --parallel watch:*",
+    "clean": "rimraf angular/dist",
+    "pack": "cd angular/dist && bestzip ../../extension-build.zip *"
   },
   "author": "",
   "license": "MIT",
@@ -12,24 +23,41 @@
     "type": "git",
     "url": "https://github.com/FSou1/QuickReply.git"
   },
+  "private": true,
   "dependencies": {
+    "@angular/animations": "^9.1.0",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/forms": "^9.1.0",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
+    "@angular/router": "^9.1.0",
+    "core-js": "^2.6.11",
     "find-focused-element": "^1.0.1",
     "guid-typescript": "^1.0.9",
-    "string-template": "^1.0.0"
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^1.0.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "2.1.0",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
-    "style-loader": "^0.23.1",
-    "svelte": "^3.22.3",
-    "svelte-loader": "^2.13.6",
-    "webpack": "4.33.0",
-    "webpack-dev-server": "3.7.1",
-    "write-file-webpack-plugin": "4.5.0"
+    "@angular-devkit/build-angular": "^0.901.0",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
+    "@angular/language-service": "^9.1.0",
+    "@types/chrome": "0.0.81",
+    "@types/node": "^12.12.32",
+    "awesome-typescript-loader": "^5.2.1",
+    "bestzip": "^2.1.5",
+    "codelyzer": "^5.2.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.7.1",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.7.5",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
