--- a/angular/src/tsconfig.app.json
+++ b/angular/src/tsconfig.app.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../out-tsc/app",
-    "types": ["chrome"]
+  'extends': '../tsconfig.json',
+  compilerOptions: {
+    outDir: '../out-tsc/app',
+    types: ['chrome']
   },
-  "files": ["main.ts", "polyfills.ts"],
-  "include": ["angular/src/**/*.d.ts"]
+  files: ['main.ts', 'polyfills.ts'],
+  include: ['angular/src/**/*.d.ts']
 }
