--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build:production": "npm run build:angular-production && npm run build:chrome-production && npm run pack",
     "watch": "npm run clean && npm-run-all --parallel watch:*",
     "clean": "rimraf angular/dist",
-    "pack": "cd angular/dist && bestzip ../../extension-build.zip *"
+    "pack": "cd angular/dist && bestzip ../../extension-build.zip *",
+    "lint": "eslint ./chrome/src/**/*.ts ./angular/src/**/*.ts",
+    "lint-fix": "eslint ./chrome/src/**/*.ts ./angular/src/**/*.ts --fix"
   },
   "author": "",
   "license": "MIT",
@@ -49,13 +51,20 @@
     "@angular/language-service": "^9.1.0",
     "@types/chrome": "0.0.81",
     "@types/node": "^12.12.32",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
     "awesome-typescript-loader": "^5.2.1",
     "bestzip": "^2.1.5",
     "codelyzer": "^5.2.2",
+    "eslint": "^7.3.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.7.1",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
     "typescript": "~3.7.5",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
