--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,7 @@
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "angular/src/styles.scss"
             ],
-            "scripts": [],
-            "es5BrowserSupport": true
+            "scripts": []
           },
           "configurations": {
             "production": {
