--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "build:angular": "ng build",
     "build:angular-production": "ng build --prod",
     "watch:angular": "ng build --watch --delete-output-path false",
-    "build:chrome": "webpack --config chrome/webpack.config.js",
-    "build:chrome-production": "webpack -p --config chrome/webpack.config.prod.js",
-    "watch:chrome": "webpack --config chrome/webpack.config.js -w",
+    "build:chrome": "webpack --config chrome/webpack.config.ts",
+    "build:chrome-production": "webpack -p --config chrome/webpack.config.prod.ts",
+    "watch:chrome": "webpack --config chrome/webpack.config.ts -w",
     "build": "npm run clean && npm run build:angular && npm run build:chrome",
     "build:production": "npm run build:angular-production && npm run build:chrome-production && npm run pack",
     "watch": "npm run clean && npm-run-all --parallel watch:*",
     "clean": "rimraf angular/dist",
     "pack": "cd angular/dist && bestzip ../../extension-build.zip *",
-    "lint": "eslint ./chrome/src/** ./angular/src/**",
-    "lint-fix": "eslint ./chrome/src/** ./angular/src/** --fix"
+    "lint": "eslint ./chrome/** ./angular/**",
+    "lint-fix": "eslint ./chrome/** ./angular/** --fix"
   },
   "author": "",
   "license": "MIT",
@@ -27,46 +27,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
+    "@angular/animations": "^10.0.1",
+    "@angular/cdk": "^10.0.0",
+    "@angular/common": "^10.0.1",
+    "@angular/compiler": "^10.0.1",
+    "@angular/core": "^10.0.1",
+    "@angular/forms": "^10.0.1",
+    "@angular/material": "^10.0.0",
+    "@angular/platform-browser": "^10.0.1",
+    "@angular/platform-browser-dynamic": "^10.0.1",
+    "@angular/router": "^10.0.1",
     "core-js": "^2.6.11",
     "find-focused-element": "^1.0.1",
     "guid-typescript": "^1.0.9",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "rxjs": "^6.5.5",
+    "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.0",
-    "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular/language-service": "^9.1.0",
+    "@angular-devkit/build-angular": "^0.1000.0",
+    "@angular/cli": "^10.0.0",
+    "@angular/compiler-cli": "^10.0.1",
+    "@angular/language-service": "^10.0.1",
     "@types/chrome": "0.0.81",
-    "@types/node": "^12.12.32",
+    "@types/node": "^12.12.47",
+    "@types/webpack": "^4.41.18",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "awesome-typescript-loader": "^5.2.1",
     "bestzip": "^2.1.5",
     "codelyzer": "^5.2.2",
     "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.7.1",
-    "ts-node": "~7.0.0",
-    "typescript": "~3.7.5",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "ts-node": "^7.0.1",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
