Update README, description

--- a/angular/src/manifest.json
+++ b/angular/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "QuickReply",
-  "description": "✎ A chrome extension for quick replies to frequently asked questions",
+  "description": "Use your notes to reply faster",
   "version": "1.0.4",
 
   "icons": {
