--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "prefix": "app",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "sass"
+          "style": "scss"
         }
       },
       "architect": {
@@ -28,8 +28,7 @@
               "angular/src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "angular/src/styles.scss"
+              "angular/src/sass/styles.scss"
             ],
             "scripts": []
           },
