--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/platform-browser": "^10.0.1",
     "@angular/platform-browser-dynamic": "^10.0.1",
     "@angular/router": "^10.0.1",
+    "angular-shepherd": "^0.7.0",
     "core-js": "^2.6.11",
     "find-focused-element": "^1.0.1",
     "guid-typescript": "^1.0.9",
