--- a/angular/src/manifest.json
+++ b/angular/src/manifest.json
@@ -77,5 +77,5 @@
     }
   },
 
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'"
 }
