--- a/angular/src/manifest.json
+++ b/angular/src/manifest.json
@@ -1,9 +1,9 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
 
   "name": "QuickReply",
   "description": "Simplify your copy/paste experience",
-  "version": "1.0.9",
+  "version": "2.0.0",
 
   "icons": {
     "16": "img/icon16.png",
@@ -19,7 +19,7 @@
     "clipboardWrite"
   ],
 
-  "browser_action": {
+  "action": {
     "default_title": "Options",
     "default_icon": "img/icon48.png"
   },
@@ -38,9 +38,7 @@
   ],
 
   "background": {
-    "scripts": [
-      "backgroundPage.js"
-    ]
+    "service_worker": "backgroundPage.js"
   },
 
   "commands": {
@@ -75,7 +73,5 @@
     "paste-reply-#5": {
       "description": "Paste the fifth reply"
     }
-  },
-
-  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'"
+  }
 }
